Ingress-Tutorial/ingress-svc-domain.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: user.dcbapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service-svc
            port:
              number: 80
  - host: department.dcbapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: department-service-svc
            port:
              number: 80
